13/06/2025:
	- Change TIFF SubIFD offset size to uint64_t in TPTImage.h. Fixes https://github.com/ruven/iipsrv/issues/281


11/06/2025:
	- Improve OpenMP detection in configure


10/06/2025:
	- Update src/Makefile.am to use universal "install -d" rather than "install -D"


04/06/2025:
	- Fix typo in configure.ac


28/05/2025: Version 1.3 Released


22/05/2025:
	- Fix to incorrect resolution calculation in View.cc
	- Correct typos in comments in JPEGImage.h


19/05/2025:
	- Make sure ICC profile buffer is freed in JPEGImage.cc.
	- Updated make install command to correctly create all leading directories.


17/05/2025:
	- Added check for unsupported HTTP methods in Main.cc and added convenience function in IIPResponse class
	  to generate appropriate HTTP headers for 405, 304 and 204 status codes


12/05/2025:
	- Minor updates to avoid SonarQube warnings


10/05/2025:
	- Updated IIP metadata object to return real iipsrv version


30/04/2025:
	- Added default initialization of cielab values in Transform::LAB2sRGB() function


28/04/2025:
	- Eliminate compilation warning with clang
	- Fixed TPTImage problem with referencing of potentially uninitialized vector for tiled but non-pyramid TIFFs.
	  Fixes https://github.com/ruven/iipsrv/issues/278


25/04/2025:
	- Added ability to call extra image processing functionality from IIIF through the 'qualities' segment of
	  the API. This adds constrast stretching, histogram equalization, image negative and logarithm options.
	  Disabled by default, but can be actived by setting the IIIF_EXTENSIONS startup parameter to 1 (0 by default).


24/04/2025:
	- Inject rights statement from COPYRIGHT into image metadata if this does not already exist to allow
	  Compressor classes to include this in image output metadata


23/04/2025:
	- Modification to not add 'color' to IIIF extraQualities field in info.json if image is monochrome


22/04/2025: